First working prediction

--- a/cluster-trace-gpu-v2020/prediction/lstm-cpu-usage.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm-cpu-usage.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,27 +425,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Shape (23, 7) (23, 7)\n",
-      "Testing Shape (81, 7) (13, 7)\n"
+      "Training Shape (14, 7) (14, 7)\n",
+      "Testing Shape (9, 7) (9, 7)\n"
      ]
     }
    ],
    "source": [
-    "TRAIN_SPLIT: int = 23\n",
-    "TEST_SPLIT = 10\n",
+    "TRAIN_SPLIT: int = 14\n",
+    "TEST_SPLIT = TRAIN_SPLIT + 9\n",
     "\n",
     "X_train = X_ss[:TRAIN_SPLIT].to_numpy()\n",
-    "X_test = X_ss[TEST_SPLIT:].to_numpy()\n",
+    "X_test = X_ss[TRAIN_SPLIT:TEST_SPLIT].to_numpy()\n",
     "\n",
     "y_train = y_mm[:TRAIN_SPLIT].to_numpy()\n",
-    "y_test = y_mm[TEST_SPLIT:].to_numpy()\n",
+    "y_test = y_mm[TRAIN_SPLIT:].to_numpy()\n",
     "\n",
     "print(\"Training Shape\", X_train.shape, y_train.shape)\n",
     "print(\"Testing Shape\", X_test.shape, y_test.shape) "
@@ -453,23 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Shape (20, 7) (20, 7)\n",
-      "Testing Shape (71, 7) (3, 7)\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,15 +484,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Shape torch.Size([23, 1, 7]) torch.Size([23, 7])\n",
-      "Testing Shape torch.Size([81, 1, 7]) torch.Size([13, 7])\n"
+      "Training Shape torch.Size([14, 1, 7]) torch.Size([14, 7])\n",
+      "Testing Shape torch.Size([9, 1, 7]) torch.Size([9, 7])\n"
      ]
     }
    ],
@@ -529,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,33 +616,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, loss: 0.10481\n",
-      "Epoch: 100, loss: 0.05549\n",
-      "Epoch: 200, loss: 0.05183\n",
-      "Epoch: 300, loss: 0.05017\n",
-      "Epoch: 400, loss: 0.04935\n",
-      "Epoch: 500, loss: 0.04894\n",
-      "Epoch: 600, loss: 0.04858\n",
-      "Epoch: 700, loss: 0.04806\n",
-      "Epoch: 800, loss: 0.04736\n",
-      "Epoch: 900, loss: 0.04584\n",
-      "Epoch: 1000, loss: 0.04386\n",
-      "Epoch: 1100, loss: 0.04265\n",
-      "Epoch: 1200, loss: 0.04194\n",
-      "Epoch: 1300, loss: 0.04122\n",
-      "Epoch: 1400, loss: 0.04042\n",
-      "Epoch: 1500, loss: 0.03963\n",
-      "Epoch: 1600, loss: 0.03889\n",
-      "Epoch: 1700, loss: 0.03825\n",
-      "Epoch: 1800, loss: 0.03772\n",
-      "Epoch: 1900, loss: 0.03729\n"
+      "Epoch: 0, loss: 0.15608\n",
+      "Epoch: 100, loss: 0.06708\n",
+      "Epoch: 200, loss: 0.05574\n",
+      "Epoch: 300, loss: 0.04801\n",
+      "Epoch: 400, loss: 0.04332\n",
+      "Epoch: 500, loss: 0.03925\n",
+      "Epoch: 600, loss: 0.03421\n",
+      "Epoch: 700, loss: 0.02767\n",
+      "Epoch: 800, loss: 0.02105\n",
+      "Epoch: 900, loss: 0.01580\n",
+      "Epoch: 1000, loss: 0.01255\n",
+      "Epoch: 1100, loss: 0.01048\n",
+      "Epoch: 1200, loss: 0.00888\n",
+      "Epoch: 1300, loss: 0.00746\n",
+      "Epoch: 1400, loss: 0.00619\n",
+      "Epoch: 1500, loss: 0.00502\n",
+      "Epoch: 1600, loss: 0.00398\n",
+      "Epoch: 1700, loss: 0.00313\n",
+      "Epoch: 1800, loss: 0.00250\n",
+      "Epoch: 1900, loss: 0.00206\n"
      ]
     }
    ],
@@ -681,6 +665,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# old transformers\n",
+    "df_X_ss = ss_scaler.transform(df)\n",
+    "df_y_mm = mm_scaler.transform(df)\n",
+    "\n",
+    "# converting to Tensors\n",
+    "df_X_ss = Variable(torch.Tensor(df_X_ss))\n",
+    "df_y_mm = Variable(torch.Tensor(df_y_mm))\n",
+    "# reshaping the dataset\n",
+    "df_X_ss = torch.reshape(df_X_ss, (df_X_ss.shape[0], 1, df_X_ss.shape[1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluation Mode\n",
+    "lstm.eval()\n",
+    "\n",
+    "# forward pass\n",
+    "train_predict = lstm(df_X_ss)\n",
+    "data_predict = train_predict.data.numpy() #numpy conversion\n",
+    "dataY_plot = df_y_mm.data.numpy()\n",
+    "\n",
+    "data_predict = mm_scaler.inverse_transform(data_predict) #reverse transformation\n",
+    "dataY_plot = mm_scaler.inverse_transform(dataY_plot)\n",
+    "plt.figure(figsize=(10,6)) #plotting\n",
+    "plt.axvline(x=200, c='r', linestyle='--') #size of the training set\n",
+    "\n",
+    "plt.plot(dataY_plot, label='Actuall Data') #actual plot\n",
+    "plt.plot(data_predict, label='Predicted Data') #predicted plot\n",
+    "plt.title('Time-Series Prediction')\n",
+    "plt.legend()\n",
+    "plt.show() "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -691,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +728,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm-cpu-usage.ipynb Cell 23\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm-cpu-usage.ipynb#ch0000031?line=0'>1</a>\u001b[0m rmse_result \u001b[39m=\u001b[39m math\u001b[39m.\u001b[39msqrt(mean_squared_error(y_test[:], preds[:]))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm-cpu-usage.ipynb#ch0000031?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTest Score: \u001b[39m\u001b[39m{\u001b[39;00mrmse_result\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m RMSE\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32m/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm-cpu-usage.ipynb Cell 22\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm-cpu-usage.ipynb#ch0000031?line=0'>1</a>\u001b[0m rmse_result \u001b[39m=\u001b[39m math\u001b[39m.\u001b[39msqrt(mean_squared_error(y_test[:], preds[:]))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/macbook/Development/alibaba_clusterdata/cluster-trace-gpu-v2020/prediction/lstm-cpu-usage.ipynb#ch0000031?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTest Score: \u001b[39m\u001b[39m{\u001b[39;00mrmse_result\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m RMSE\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'preds' is not defined"
      ]
     }
