--- a/cluster-trace-gpu-v2020/prediction/lstm_utilization_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_utilization_prediction.ipynb
@@ -96,16 +96,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.plot(figsize=(20, 12))\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,13 +176,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mm_scaler = MinMaxScaler()\n",
     "ss_scaler = StandardScaler()\n",
+    "mm_scaler = MinMaxScaler()\n",
+    "# mm_scaler = StandardScaler()\n",
     "\n",
     "y_range = ['cpu_usage', 'gpu_wrk_util', 'avg_mem', 'max_mem',\n",
     "       'avg_gpu_wrk_mem', 'max_gpu_wrk_mem', 'runtime']\n",
-    "\n",
-    "# y_range = ['cpu_usage']\n",
     "\n",
     "X_ss = pd.DataFrame(ss_scaler.fit_transform(train))\n",
     "y_mm = pd.DataFrame(mm_scaler.fit_transform(test[y_range]))"
@@ -571,23 +560,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_column(actual_values = data_y_plot_df, predicted_values = data_predict_df, column_number: int = 0):\n",
+    "def plot_column(actual_values = data_y_plot_df, predicted_values = data_predict_df, column_number: int = 0, rmse_threshold: float = 0.30):\n",
+    "    \n",
+    "    if len(y_range) <= column_number:\n",
+    "        print('Out of Prediction Bounds')\n",
+    "        return\n",
+    "    \n",
     "    plt.figure(figsize=(25, 15))  # plotting\n",
-    "    pred_colums = ['pred_' + col for col in df.columns]\n",
+    "    pred_colums = ['pred_' + col for col in y_range]\n",
     "\n",
-    "    column = df.columns[column_number]\n",
+    "    column = y_range[column_number]\n",
     "\n",
     "    rmse = get_rmse(actual_values[column], predicted_values[column])\n",
     "    mae = mean_absolute_error(actual_values[column], predicted_values[column])\n",
+    "    \n",
+    "    predicted_color = 'green' if rmse < rmse_threshold else 'orange'\n",
     "\n",
-    "    plt.plot(actual_values[column], label=column)  # actual plot\n",
-    "    plt.plot(predicted_values[column], label='pred_' + column)  # predicted plot\n",
+    "    plt.plot(actual_values[column], label=column, color='black')  # actual plot\n",
+    "    plt.plot(predicted_values[column], label='pred_' + column, color=predicted_color)  # predicted plot\n",
     "    \n",
     "    plt.title('Time-Series Prediction')\n",
     "    plt.plot([], [], ' ', label=f'RMSE: {rmse}')\n",
     "    plt.plot([], [], ' ', label=f'MAE: {mae}')\n",
     "    plt.legend()\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_column(column_number=0)"
    ]
   },
   {
