Added metrics helper file and removed redundant Variable wrapper for torch tensors

--- a/cluster-trace-gpu-v2020/prediction/lstm_utilization_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_utilization_prediction.ipynb
@@ -434,11 +434,11 @@
     "df_y_mm = mm_scaler.transform(df[y_range])\n",
     "\n",
     "# converting to Tensors\n",
-    "df_X_ss = Variable(torch.Tensor(df_X_ss))\n",
-    "df_y_mm = Variable(torch.Tensor(df_y_mm))\n",
+    "df_X_ss = torch.Tensor(df_X_ss)\n",
+    "df_y_mm = torch.Tensor(df_y_mm)\n",
     "\n",
     "# reshaping the dataset\n",
-    "df_X_ss = torch.reshape(df_X_ss, (df_X_ss.shape[0], 1, df_X_ss.shape[1]))\n"
+    "df_X_ss = torch.reshape(df_X_ss, (df_X_ss.shape[0], 1, df_X_ss.shape[1]))"
    ]
   },
   {
