--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -6,8 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# used for statistical processes, i.e scaling the dataset\n",
-    "\n",
     "from lstm_models import LSTM\n",
     "from gpu_dataloader import GPUDataset\n",
     "from torch.utils.data import DataLoader, SubsetRandomSampler\n",
@@ -22,8 +20,11 @@
     "# used for the dataframes\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
     "import numpy as np\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "\n",
+    "from utils import get_device_as_string, get_device"
    ]
   },
   {
@@ -53,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size: int = 500\n",
+    "batch_size: int = 1000\n",
     "dataset = GPUDataset(small_df=True, batch_size=batch_size)"
    ]
   },
@@ -72,17 +73,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs: int = 50\n",
-    "learning_rate: float = 0.02\n",
+    "num_epochs: int = 100\n",
+    "learning_rate: float = 0.01\n",
     "\n",
     "# number of features\n",
     "input_size: int = dataset.X.shape[2]\n",
     "# number of features in hidden state\n",
-    "hidden_size: int = dataset.X.shape[2] * 32\n",
+    "hidden_size: int = dataset.X.shape[2] * 64\n",
     "# number of stacked lstm layers\n",
     "num_layers: int = 1\n",
     "# number of output classes\n",
-    "num_classes: int = dataset.y.shape[1]"
+    "num_classes: int = dataset.y.shape[1]\n",
+    "\n",
+    "device = get_device()"
    ]
   },
   {
@@ -108,20 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lstm = LSTM(num_classes, input_size, hidden_size, num_layers, dataset.X.shape[1])\n",
-    "lstm.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mean squared error for regression\n",
-    "criterion = nn.MSELoss()\n",
-    "# optimizer function\n",
-    "optimizer = torch.optim.AdamW(lstm.parameters(), lr=learning_rate)"
+    "lstm = LSTM(num_classes, input_size, hidden_size, num_layers, dataset.X.shape[1])"
    ]
   },
   {
@@ -145,10 +135,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# lstm = lstm.to(device)\n",
+    "lstm.train()\n",
+    "# log gradients and model parameters\n",
+    "wandb.watch(lstm)\n",
+    "\n",
+    "lstm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean squared error for regression\n",
+    "criterion = nn.MSELoss()\n",
+    "criterion = criterion.to(get_device())\n",
+    "# optimizer function\n",
+    "optimizer = torch.optim.AdamW(lstm.parameters(), lr=learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import random\n",
     "\n",
+    "from utils import get_device\n",
+    "\n",
     "for epoch in range(num_epochs):\n",
-    "    print(f'Epoch: {epoch}')\n",
     "\n",
     "    batch_section = [idx for idx in range(len(dataset) // batch_size)]\n",
     "\n",
@@ -157,12 +175,15 @@
     "        sampler = SubsetRandomSampler(\n",
     "            list(range(choice*batch_size, (choice+1)*batch_size)))\n",
     "        train_loader = DataLoader(\n",
-    "            dataset, batch_size=batch_size, shuffle=False, num_workers=5, sampler=sampler)\n",
+    "            dataset, batch_size=batch_size, shuffle=False, num_workers=6, sampler=sampler)\n",
     "\n",
     "        for _, (inputs, labels) in enumerate(train_loader):\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            \n",
     "            optimizer.zero_grad()\n",
     "\n",
     "            outputs = lstm.forward(inputs)\n",
+    "            outputs = outputs.to(device)\n",
     "\n",
     "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
@@ -173,9 +194,14 @@
     "        \n",
     "\n",
     "    # logging to wandb\n",
-    "    o = outputs.detach()\n",
-    "    rmse = get_rmse(o, labels)\n",
-    "    mae = get_mae(o, labels)\n",
+    "    if get_device_as_string() == 'cuda':\n",
+    "        o = outputs.cpu().detach().numpy()\n",
+    "        l = labels.cpu().detach().numpy()\n",
+    "    else:\n",
+    "        o = outputs.detach().numpy()\n",
+    "        l = labels.detach().numpy()\n",
+    "    rmse = get_rmse(o, l)\n",
+    "    mae = get_mae(o, l)\n",
     "    log_dict: dict = {\n",
     "        LOSS: loss.item(),\n",
     "        RMSE_TRAINING: rmse,\n",
@@ -183,9 +209,7 @@
     "    }\n",
     "    wandb.log(log_dict)\n",
     "\n",
-    "    if epoch % 5 == 0:\n",
-    "        print(\n",
-    "            f'Epoch: {epoch}, loss: {loss.item():2f}, rmse: {rmse:2f}, mae: {mae:2f}')\n"
+    "    print(f'Epoch: {epoch}, loss: {loss.item():2f}, rmse: {rmse:2f}, mae: {mae:2f}')\n"
    ]
   },
   {
@@ -224,9 +248,14 @@
    "source": [
     "lstm.eval()\n",
     "\n",
+    "X_df = dataset.X\n",
+    "X_df = X_df.to(device)\n",
     "# forward pass\n",
-    "prediction = lstm(dataset.X)\n",
-    "prediction = prediction.data.numpy()\n",
+    "prediction = lstm(X_df)\n",
+    "if get_device_as_string() == 'cuda':\n",
+    "    prediction = prediction.cpu().data.numpy()\n",
+    "else:\n",
+    "    prediction = prediction.data.numpy()\n",
     "prediction = dataset.standard_scaler.fit_transform(prediction)\n",
     "\n",
     "actual_data = dataset.y.data.numpy()\n",
@@ -282,15 +311,6 @@
     "mae_result = mean_absolute_error(actual_data_df[:], prediction_df[:])\n",
     "print(f'Test Score: {mae_result} MAE')\n",
     "wandb.summary[mae_key] = mae_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_rmse(actual_data_df[actual_data_df.columns[1]], actual_data_df[actual_data_df.columns[4]])"
    ]
   },
   {
@@ -404,7 +424,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('ml_pytorch')",
+   "display_name": "Python 3.9.13 ('ml_pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -418,12 +438,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bc289c9585466324d6bcd715c701435d361dd4760f0e3d7325b29a75549769c1"
+    "hash": "631fa29ff452e796f5703a13b9a25aaedc38e1bbca43d17166395e7a7dc8b7e5"
    }
   }
  },
