Added test dataset and evaluation of model to notebook

--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size: int = 1000\n",
+    "batch_size: int = 200\n",
     "dataset = GPUDataset(small_df=True, batch_size=batch_size)"
    ]
   },
@@ -64,16 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_epochs: int = 100\n",
+    "num_epochs: int = 5\n",
     "learning_rate: float = 0.01\n",
     "\n",
     "# number of features\n",
@@ -188,6 +179,8 @@
     "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "            \n",
+    "            wandb.log({'loss batch': loss.item()})\n",
     "\n",
     "        # remove batch section after training on it\n",
     "        batch_section.remove(choice)\n",
@@ -319,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_column(actual_values=actual_data_df, predicted_values=prediction_df, column_number: int = 0, rmse_threshold: float = 0.30):\n",
+    "def plot_column(actual_values=actual_data_df, predicted_values=prediction_df, column_number: int = 0, rmse_threshold: float = 0.30, is_training: bool = True):\n",
     "\n",
     "    if len(label_columns) <= column_number:\n",
     "        print('Out of Prediction Bounds')\n",
@@ -328,7 +321,7 @@
     "    plt.figure(figsize=(25, 15))  # plotting\n",
     "\n",
     "    column = label_columns[column_number]\n",
-    "    pred_column = f'pred_{column}'\n",
+    "    pred_column = f\"pred_{column}_{'training' if is_training else 'test'}\"\n",
     "\n",
     "    rmse = get_rmse(actual_values[column], predicted_values[column])\n",
     "    mae = mean_absolute_error(actual_values[column], predicted_values[column])\n",
@@ -420,11 +413,111 @@
    "source": [
     "plot_column(column_number=6)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Set Analysis\n",
+    "\n",
+    "Below, the test set will be loaded and the model evaluated with it to see the actual performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset = GPUDataset(is_training=False, small_df=True, batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lstm.eval()\n",
+    "\n",
+    "X_df = test_dataset.X\n",
+    "X_df = X_df.to(device)\n",
+    "# forward pass\n",
+    "prediction = lstm(X_df)\n",
+    "if get_device_as_string() == 'cuda':\n",
+    "    prediction = prediction.cpu().data.numpy()\n",
+    "else:\n",
+    "    prediction = prediction.data.numpy()\n",
+    "prediction = test_dataset.standard_scaler.fit_transform(prediction)\n",
+    "\n",
+    "actual_data = test_dataset.y.data.numpy()\n",
+    "actual_data = test_dataset.minmax_scaler.fit_transform(actual_data)\n",
+    "\n",
+    "# reverse transformation\n",
+    "prediction = test_dataset.standard_scaler.inverse_transform(prediction)\n",
+    "actual_data = test_dataset.minmax_scaler.inverse_transform(actual_data)\n",
+    "\n",
+    "label_columns = test_dataset.get_default_label_columns()\n",
+    "# create dataframes\n",
+    "prediction_df = pd.DataFrame(prediction, columns=label_columns)\n",
+    "actual_data_df = pd.DataFrame(actual_data, columns=label_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse_key: str = 'Root Mean Squared Error (Overall - Test)'\n",
+    "rmse_result = get_rmse(actual_data_df[:], prediction_df[:])\n",
+    "print(f'Test Score: {rmse_result:.2f} RMSE')\n",
+    "wandb.summary[rmse_key] = rmse_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mae_key: str = 'Mean Absolute Error (Overall - Test)'\n",
+    "mae_result = mean_absolute_error(actual_data_df[:], prediction_df[:])\n",
+    "print(f'Test Score: {mae_result} MAE')\n",
+    "wandb.summary[mae_key] = mae_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_column(column_number=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_column(column_number=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_column(column_number=2)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('ml_pytorch')",
+   "display_name": "Python 3.9.12 ('ml_pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -438,12 +531,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "631fa29ff452e796f5703a13b9a25aaedc38e1bbca43d17166395e7a7dc8b7e5"
+    "hash": "bc289c9585466324d6bcd715c701435d361dd4760f0e3d7325b29a75549769c1"
    }
   }
  },
