--- a/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_general_prediction.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size: int = 100\n",
+    "batch_size: int = 25\n",
     "dataset = GPUDataset(small_df=True, batch_size=batch_size)"
    ]
   },
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs: int = 30\n",
+    "num_epochs: int = 200\n",
     "learning_rate: float = 0.001\n",
     "\n",
     "# number of features\n",
@@ -267,7 +267,7 @@
     }
    ],
    "source": [
-    "# mean squared error for regression\n",
+    "# mean square error for regression\n",
     "criterion = nn.MSELoss(size_average=10)\n",
     "criterion = criterion.to(get_device())\n",
     "# criterion = RMSELoss()\n",
@@ -579,108 +579,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Prediction Bounds\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_column(column_number=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Prediction Bounds\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_column(column_number=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Prediction Bounds\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_column(column_number=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Prediction Bounds\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_column(column_number=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Prediction Bounds\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_column(column_number=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Prediction Bounds\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_column(column_number=6)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -812,40 +710,6 @@
    "source": [
     "start_idx, end_idx = 9000, 10000\n",
     "plot_column(actual_values=actual_data_df[start_idx:end_idx], predicted_values=prediction_df[start_idx:end_idx], column_number=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Prediction Bounds\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_column(column_number=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Prediction Bounds\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_column(column_number=2)"
    ]
   }
  ],
