Added new branch for changes after initial deliverable draft

--- a/cluster-trace-gpu-v2020/prediction/lstm_dataset_training_preparation.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_dataset_training_preparation.ipynb
@@ -764,8 +764,9 @@
    "source": [
     "training_columns: list = ['machine', 'task_name', 'inst_num', 'cpu_usage',\n",
     "                          'gpu_wrk_util', 'avg_mem', 'max_mem', 'avg_gpu_wrk_mem',\n",
-    "                          'max_gpu_wrk_mem', 'cap_cpu', 'cap_mem',\n",
-    "                          'cap_gpu', 'runtime']\n",
+    "                          'max_gpu_wrk_mem',\n",
+    "                          'plan_cpu', 'plan_mem', 'plan_gpu',\n",
+    "                          'cap_cpu', 'cap_mem', 'cap_gpu', 'runtime']\n",
     "\n",
     "machine_df = df[training_columns]\n"
    ]
@@ -790,25 +791,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>machine</th>\n",
+       "      <th>task_name</th>\n",
+       "      <th>inst_num</th>\n",
+       "      <th>cpu_usage</th>\n",
+       "      <th>gpu_wrk_util</th>\n",
+       "      <th>avg_mem</th>\n",
+       "      <th>max_mem</th>\n",
+       "      <th>avg_gpu_wrk_mem</th>\n",
+       "      <th>max_gpu_wrk_mem</th>\n",
+       "      <th>plan_cpu</th>\n",
+       "      <th>plan_mem</th>\n",
+       "      <th>plan_gpu</th>\n",
+       "      <th>cap_cpu</th>\n",
+       "      <th>cap_mem</th>\n",
+       "      <th>cap_gpu</th>\n",
+       "      <th>runtime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>start_date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1970-01-19 17:24:53+08:00</th>\n",
+       "      <td>3b127c8abb4f26e57b34af81</td>\n",
+       "      <td>PyTorchWorker</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>773.050807</td>\n",
+       "      <td>12.648778</td>\n",
+       "      <td>19.953011</td>\n",
+       "      <td>20.825195</td>\n",
+       "      <td>4.266602</td>\n",
+       "      <td>4.266602</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>512</td>\n",
+       "      <td>8</td>\n",
+       "      <td>573388.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-20 15:06:05+08:00</th>\n",
+       "      <td>8822661a76b030d582e9bbb2</td>\n",
+       "      <td>worker</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>608.671034</td>\n",
+       "      <td>192.687750</td>\n",
+       "      <td>14.726125</td>\n",
+       "      <td>29.648438</td>\n",
+       "      <td>30.607422</td>\n",
+       "      <td>30.607422</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>29.296875</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>512</td>\n",
+       "      <td>2</td>\n",
+       "      <td>495315.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-20 15:06:05+08:00</th>\n",
+       "      <td>34ff670729b854702064bdb9</td>\n",
+       "      <td>worker</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>608.102445</td>\n",
+       "      <td>192.662726</td>\n",
+       "      <td>14.808974</td>\n",
+       "      <td>29.830078</td>\n",
+       "      <td>30.607422</td>\n",
+       "      <td>30.607422</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>29.296875</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>512</td>\n",
+       "      <td>2</td>\n",
+       "      <td>495309.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-20 15:06:06+08:00</th>\n",
+       "      <td>4aa72ac9bb3b481adc47b818</td>\n",
+       "      <td>worker</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>385.129135</td>\n",
+       "      <td>190.093625</td>\n",
+       "      <td>14.586163</td>\n",
+       "      <td>29.396484</td>\n",
+       "      <td>30.607422</td>\n",
+       "      <td>30.607422</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>29.296875</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>512</td>\n",
+       "      <td>2</td>\n",
+       "      <td>495308.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-20 15:06:37+08:00</th>\n",
+       "      <td>df2657c90eebc406289f6dc2</td>\n",
+       "      <td>worker</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>614.094135</td>\n",
+       "      <td>193.115833</td>\n",
+       "      <td>14.683479</td>\n",
+       "      <td>29.597656</td>\n",
+       "      <td>30.607422</td>\n",
+       "      <td>30.607422</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>29.296875</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>512</td>\n",
+       "      <td>2</td>\n",
+       "      <td>495278.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-03-16 23:55:21+08:00</th>\n",
+       "      <td>e81f3a4340c6f6ac426a75b5</td>\n",
+       "      <td>worker</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>64.200000</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.793359</td>\n",
+       "      <td>2.707031</td>\n",
+       "      <td>3.076172</td>\n",
+       "      <td>7.491211</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>3.906250</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>512</td>\n",
+       "      <td>8</td>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-03-16 23:55:22+08:00</th>\n",
+       "      <td>78ad1a1d5fc02a96b2d88de8</td>\n",
+       "      <td>worker</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>76.125000</td>\n",
+       "      <td>3.875000</td>\n",
+       "      <td>0.855835</td>\n",
+       "      <td>3.599609</td>\n",
+       "      <td>1.233154</td>\n",
+       "      <td>7.368164</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>3.906250</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>512</td>\n",
+       "      <td>8</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-03-16 23:56:10+08:00</th>\n",
+       "      <td>cbbd429873e443159a84e71e</td>\n",
+       "      <td>tensorflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>117.071429</td>\n",
+       "      <td>0.153846</td>\n",
+       "      <td>1.030134</td>\n",
+       "      <td>1.858398</td>\n",
+       "      <td>0.467323</td>\n",
+       "      <td>0.830078</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>29.296875</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>512</td>\n",
+       "      <td>8</td>\n",
+       "      <td>122.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-03-16 23:56:37+08:00</th>\n",
+       "      <td>4d362195c887cbfc274394e7</td>\n",
+       "      <td>worker</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>111.200000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.734863</td>\n",
+       "      <td>1.491211</td>\n",
+       "      <td>0.098633</td>\n",
+       "      <td>0.098633</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>29.296875</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>512</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-03-16 23:58:10+08:00</th>\n",
+       "      <td>e34a6b601d688805698e972e</td>\n",
+       "      <td>tensorflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>47.333333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.467122</td>\n",
+       "      <td>0.554688</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>29.296875</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>512</td>\n",
+       "      <td>8</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1954769 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            machine      task_name  inst_num  \\\n",
+       "start_date                                                                     \n",
+       "1970-01-19 17:24:53+08:00  3b127c8abb4f26e57b34af81  PyTorchWorker       1.0   \n",
+       "1970-01-20 15:06:05+08:00  8822661a76b030d582e9bbb2         worker      16.0   \n",
+       "1970-01-20 15:06:05+08:00  34ff670729b854702064bdb9         worker      16.0   \n",
+       "1970-01-20 15:06:06+08:00  4aa72ac9bb3b481adc47b818         worker      16.0   \n",
+       "1970-01-20 15:06:37+08:00  df2657c90eebc406289f6dc2         worker      16.0   \n",
+       "...                                             ...            ...       ...   \n",
+       "1970-03-16 23:55:21+08:00  e81f3a4340c6f6ac426a75b5         worker       5.0   \n",
+       "1970-03-16 23:55:22+08:00  78ad1a1d5fc02a96b2d88de8         worker       5.0   \n",
+       "1970-03-16 23:56:10+08:00  cbbd429873e443159a84e71e     tensorflow       1.0   \n",
+       "1970-03-16 23:56:37+08:00  4d362195c887cbfc274394e7         worker       1.0   \n",
+       "1970-03-16 23:58:10+08:00  e34a6b601d688805698e972e     tensorflow       1.0   \n",
+       "\n",
+       "                            cpu_usage  gpu_wrk_util    avg_mem    max_mem  \\\n",
+       "start_date                                                                  \n",
+       "1970-01-19 17:24:53+08:00  773.050807     12.648778  19.953011  20.825195   \n",
+       "1970-01-20 15:06:05+08:00  608.671034    192.687750  14.726125  29.648438   \n",
+       "1970-01-20 15:06:05+08:00  608.102445    192.662726  14.808974  29.830078   \n",
+       "1970-01-20 15:06:06+08:00  385.129135    190.093625  14.586163  29.396484   \n",
+       "1970-01-20 15:06:37+08:00  614.094135    193.115833  14.683479  29.597656   \n",
+       "...                               ...           ...        ...        ...   \n",
+       "1970-03-16 23:55:21+08:00   64.200000      0.400000   0.793359   2.707031   \n",
+       "1970-03-16 23:55:22+08:00   76.125000      3.875000   0.855835   3.599609   \n",
+       "1970-03-16 23:56:10+08:00  117.071429      0.153846   1.030134   1.858398   \n",
+       "1970-03-16 23:56:37+08:00  111.200000      0.000000   0.734863   1.491211   \n",
+       "1970-03-16 23:58:10+08:00   47.333333      0.000000   0.467122   0.554688   \n",
+       "\n",
+       "                           avg_gpu_wrk_mem  max_gpu_wrk_mem  plan_cpu  \\\n",
+       "start_date                                                              \n",
+       "1970-01-19 17:24:53+08:00         4.266602         4.266602     400.0   \n",
+       "1970-01-20 15:06:05+08:00        30.607422        30.607422     600.0   \n",
+       "1970-01-20 15:06:05+08:00        30.607422        30.607422     600.0   \n",
+       "1970-01-20 15:06:06+08:00        30.607422        30.607422     600.0   \n",
+       "1970-01-20 15:06:37+08:00        30.607422        30.607422     600.0   \n",
+       "...                                    ...              ...       ...   \n",
+       "1970-03-16 23:55:21+08:00         3.076172         7.491211     400.0   \n",
+       "1970-03-16 23:55:22+08:00         1.233154         7.368164     400.0   \n",
+       "1970-03-16 23:56:10+08:00         0.467323         0.830078     600.0   \n",
+       "1970-03-16 23:56:37+08:00         0.098633         0.098633     600.0   \n",
+       "1970-03-16 23:58:10+08:00         0.000000         0.000000     600.0   \n",
+       "\n",
+       "                            plan_mem  plan_gpu  cap_cpu  cap_mem  cap_gpu  \\\n",
+       "start_date                                                                  \n",
+       "1970-01-19 17:24:53+08:00  10.000000     100.0       96      512        8   \n",
+       "1970-01-20 15:06:05+08:00  29.296875     200.0       64      512        2   \n",
+       "1970-01-20 15:06:05+08:00  29.296875     200.0       64      512        2   \n",
+       "1970-01-20 15:06:06+08:00  29.296875     200.0       64      512        2   \n",
+       "1970-01-20 15:06:37+08:00  29.296875     200.0       64      512        2   \n",
+       "...                              ...       ...      ...      ...      ...   \n",
+       "1970-03-16 23:55:21+08:00   3.906250     100.0       96      512        8   \n",
+       "1970-03-16 23:55:22+08:00   3.906250     100.0       96      512        8   \n",
+       "1970-03-16 23:56:10+08:00  29.296875     100.0       96      512        8   \n",
+       "1970-03-16 23:56:37+08:00  29.296875     100.0       96      512        2   \n",
+       "1970-03-16 23:58:10+08:00  29.296875     100.0       96      512        8   \n",
+       "\n",
+       "                            runtime  \n",
+       "start_date                           \n",
+       "1970-01-19 17:24:53+08:00  573388.0  \n",
+       "1970-01-20 15:06:05+08:00  495315.0  \n",
+       "1970-01-20 15:06:05+08:00  495309.0  \n",
+       "1970-01-20 15:06:06+08:00  495308.0  \n",
+       "1970-01-20 15:06:37+08:00  495278.0  \n",
+       "...                             ...  \n",
+       "1970-03-16 23:55:21+08:00      43.0  \n",
+       "1970-03-16 23:55:22+08:00      65.0  \n",
+       "1970-03-16 23:56:10+08:00     122.0  \n",
+       "1970-03-16 23:56:37+08:00      22.0  \n",
+       "1970-03-16 23:58:10+08:00      23.0  \n",
+       "\n",
+       "[1954769 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "machine_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1954769, 13)"
+       "(1954769, 16)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,9 +1172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1954769, 12)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dummies = pd.get_dummies(machine_df['task_name'])\n",
     "dummies.shape\n"
@@ -829,9 +1193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1954769, 28)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "machine_df = pd.concat([machine_df, dummies], axis=1)\n",
     "machine_df.shape"
@@ -839,16 +1214,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['machine', 'task_name', 'inst_num', 'cpu_usage', 'gpu_wrk_util',\n",
+       "       'avg_mem', 'max_mem', 'avg_gpu_wrk_mem', 'max_gpu_wrk_mem', 'plan_cpu',\n",
+       "       'plan_mem', 'plan_gpu', 'cap_cpu', 'cap_mem', 'cap_gpu', 'runtime',\n",
+       "       'BladeMain', 'JupyterTask', 'OpenmpiWorker', 'OssToVolumeWorker',\n",
+       "       'PyTorchWorker', 'TVMTuneMain', 'chief', 'evaluator', 'ps',\n",
+       "       'tensorflow', 'worker', 'xComputeWorker'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "machine_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,16 +1250,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1953472, 26)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "machine_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
